--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,44 @@
-reportlab
-Django==2.2.2
-django-widget-tweaks==1.4.5
+astroid==2.2.5
+backports.csv==1.0.7
+beautifulsoup4==4.8.0
+bs4==0.0.1
+certifi==2019.6.16
+chardet==3.0.4
+colorama==0.4.1
+defusedxml==0.6.0
+diff-match-patch==20181111
+Django==2.0.7
+django-filter==2.1.0
+django-filters==0.2.1
+django-import-export==1.2.0
+django-mathfilters==0.4.0
+django-scheduler==0.8.8
+django-widget-tweaks==1.4.3
+djangorestframework==3.9.4
+et-xmlfile==1.0.1
+icalendar==4.0.3
+idna==2.8
+isort==4.3.21
+jdcal==1.4.1
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
+mysqlclient==1.3.12
+odfpy==1.4.0
+openpyxl==2.6.3
 Pillow==6.0.0
+pylint==2.3.1
+python-dateutil==2.8.0
 pytz==2019.1
+PyYAML==5.1.2
+requests==2.22.0
+six==1.12.0
+soupsieve==1.9.2
 sqlparse==0.3.0
-virtualenv==16.6.0
+tablib==0.13.0
+typed-ast==1.4.0
+urllib3==1.25.3
+virtualenv==16.0.0
+virtualenvwrapper-win==1.2.5
+wrapt==1.11.2
+xlrd==1.2.0
+xlwt==1.3.0
